styles.css
body{
    font-family: 'Rubik';
    background-color: hsl(226, 43%, 10%);
    color: white;
}

.dots{
    font-size: 40px;
    color: hsl(236, 100%, 87%);
    margin-top: 0;
}

.dots:hover{
    color: white;
}

.leftInfo{
    text-align: left;
    width: 50%;
}

.rightInfo{
    text-align: right;
    width: 50%;
}

.container{
    display: flex;
    flex-direction: column;
}

.person{
    grid-row-start: 1;
    grid-row-end: 3;
}

.person p{
    padding: 10px;
}

.person img{
    border-radius: 50%;
    border: 3px solid white;
    margin: 5px;
}

.person button{
    padding: 30px;
    font-size: 20px;
}

.person, .work, .play, .study, .exercise, .social, .selfCare{
    background-color: hsl(235, 46%, 20%);
    border-radius: 20px;
    margin: 15px;
}

.personTitle{
    background-color: hsl(246, 80%, 60%);
    border-radius: 20px;
}

.title{
    font-size: 20px;
}

.work{
    background-color: hsl(15, 100%, 70%);
    background-image: url("images/icon-work.svg");
    background-repeat: no-repeat;
}

.play{
    background-color: hsl(195, 74%, 62%);
    background-image: url("images/icon-play.svg");
    background-repeat: no-repeat;
}

.study{
    background-color: hsl(348, 100%, 68%);
    background-image: url("images/icon-study.svg");
    background-repeat: no-repeat;
}

.exercise{
    background-color: hsl(145, 58%, 55%);
    background-image: url("images/icon-exercise.svg");
    background-repeat: no-repeat;
}

.social{
    background-color: hsl(264, 64%, 52%);
    background-image: url("images/icon-social.svg");
    background-repeat: no-repeat;
}

.selfCare{
    background-color: hsl(43, 84%, 65%);
    background-image: url("images/icon-self-care.svg");
    background-repeat: no-repeat;
}

#workInfo, #playInfo, #studyInfo, #exerciseInfo, #socialInfo, #selfInfo{
    background-color: hsl(235, 46%, 20%);
    border-radius: 20px;
    padding: 10px;
    margin-top: 55px;
    white-space: nowrap;
    display: flex;
}

#workInfo:hover, #playInfo:hover, #studyInfo:hover, #exerciseInfo:hover, #socialInfo:hover, #selfInfo:hover{
    background-color: hsl(235, 45%, 61%);
    cursor: pointer;
}

#workPrev, #playPrev, #studyPrev, #exercisePrev, #socialPrev, #selfPrev{
    color: hsl(236, 100%, 87%);
}

#workCurrent, #playCurrent, #studyCurrent, #exerciseCurr, #socialCurr, #selfCurrent{
    font-size: 30px;
}

#dailyButton, #weeklyButton, #monthlyButton{
    background: transparent;
    border: none;
    font-family: 'Rubik';
    color: hsl(235, 45%, 61%);
}

#dailyButton:hover, #dailyButton:disabled, #weeklyButton:hover, #weeklyButton:disabled, #monthlyButton:hover, #monthlyButton:disabled{
    color: white;
    cursor: pointer;
}

#reportFor{
    color: hsl(236, 100%, 87%);
}

#personName{
    font-size: 25px;
    color: white;
    font-weight: 100;
}

#buttons{
    display: flex;
    justify-content: center;
}

@media (max-width: 48em){
    .personTitle{
        padding: 20px;
        display: flex;
        justify-content: center;
    }
}

@media (min-width: 48em){
    .container{
        display: grid;
        grid-template-columns: 1fr 1fr 1fr 1fr;
        align-items: center;
        justify-items: center;
    }

    .person, .work, .play, .study, .exercise, .social, .selfCare{
        min-width: 90%;
    }

    .person button{
        padding: 20px;
    }

    .personTitle{
        height: 350px;
    }

    #workCurrent, #playCurrent, #studyCurrent, #exerciseCurr, #socialCurr, #selfCurrent{
        font-size: 45px;
    }

    #workPrev, #playPrev, #studyPrev, #exercisePrev, #socialPrev, #selfPrev{
        padding-top: 25px;
    }

    #buttons{
        display: flex;
        flex-direction: column;
        height: 200px;
    }
}

